Adding images, updating website to use processing.js

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         $('#main_content').headsmart()
       })
     </script>
+	
+	<script type="text/javascript" src="javascripts/processing-1.4.1.min.js"></script>
     <title>020-Impolite by AlanChatham</title>
   </head>
 
@@ -29,6 +31,8 @@
           <span class="ribbon-inner">
             <h1>020-Impolite</h1>
             <h2>Project with Charlie Schmidt</h2>
+			<canvas id="game_canvas" data-processing-sources="Impolite/Impolite.pde"></canvas>
+		
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
