Updating location of sketch

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <span class="ribbon-inner">
             <h1>020-Impolite</h1>
             <h2>Project with Charlie Schmidt</h2>
-			<canvas id="game_canvas" data-processing-sources="Impolite/Impolite.pde"></canvas>
+			<canvas id="game_canvas" data-processing-sources="Impolite.pde"></canvas>
 		
           </span>
           <span class="left-tail"></span>
